# ESP32-Mobile

./: .gitignore  sdkconfig
main/: CMakeLists.txt  ble.c  ble.h  main.c  main.h  weather.c  weather.h  weather_icons.c  wifi.c  wifi.h
